[package]
name = "my_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"  
linked_list_allocator = "0.9.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] 


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]# QEMU exit code , iobase => 0xf4 is the port to write the exit code to, iosize => 0x04 is the size of the port
test-success-exit-code = 33   # QEMU exit code for success
test-timeout = 300    # timeout after 5 min 

# ------------------------------- Test Configuration -------------------------------

[[test]] 
name = "should_panic" # test name
harness = false  # just to run the test without the test harness bcz we are testing the panic

[[test]]
name = "stack_overflow"
harness = false
